# UntilEveryCage

./: CODEBASE_ANALYSIS.md  Cargo.toml  README.md  analyze_italy.py  convert_italy_data.py  geocode_italy.py  get_mx_states.py  notes.md
Old CSVs/: italian_facilities.csv
Old CSVs/Extra Data/: company_references.csv  finalnaildata.csv  finalnaildata.json
Old CSVs/mexico/: meat.csv
Old CSVs/mexico-aquaculture/: 00_explore_dataset.py  01_analyze_scian_codes.py  02_filter_animal_facilities.py  03_create_filtered_csv.py  04_clean_data.py  06_create_focused_filter.py  99_combine_mexico_locations.py  COMPLETION_REPORT.txt  FOCUSED_DEPLOYMENT_FINAL.txt  FOCUSED_VERSION_SUMMARY.md  MEXICO_DATA_PIPELINE.md  README.md  SCRIPTS_INDEX.md  analyze_farming_services.py  check_types.py  mexico_aquaculture(cleaned).csv  verify_deployment.py
Old CSVs/nz/: data.csv  process_nz_data.py  source.txt
Old scripts/: clean_canada_data.py  combine_ontario_csvs.py  geocode_italian_facilities.py  scrape_italian_facilities.py
dirty-datasets/: italy_locations.csv  italy_scraper.py
dirty-datasets/it/: geocode_italy_nominatim.py  geocode_italy_test.py  geocode_italy_v2.py
dirty-datasets/mexico/: labs.csv  (+1 more)
dirty-datasets/mexico-aquaculture/: 05_convert_to_project_schema.py  07_convert_focused_to_schema.py  08_deploy_focused.py  09_compare_versions.py  INTEGRATION_SUMMARY.md  copy_to_project.py
src/: lib.rs  location.rs  main.rs
static/: about.html  accordion.js  app.js  footer.html  footer.js  howtouse.html  index.html  init-i18n.js  map-filter-styles.css  style.css  sw.js
(+41 files in other folders)
