[package]
name = "heatmap-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "compression-br"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.0"
include_dir = "0.7.4"
once_cell = "1.19"

# Shuttle dependencies
shuttle-runtime = "0.55.0"
shuttle-axum = "0.55.0"
serde-xml-rs = "0.8.1"
